--- a/package.json
+++ b/package.json
@@ -100,15 +100,15 @@
     "@aws-sdk/cloudfront-signer": "^3.468.0",
     "@aws-sdk/s3-request-presigner": "^3.470.0",
     "@fortawesome/fontawesome-free": "^5.8.2",
-    "@googlemaps/google-maps-services-js": "^3.3.26",
+    "@googlemaps/google-maps-services-js": "^3.3.42",
     "@node-oauth/oauth2-server": "^4.3.0",
     "@popperjs/core": "^2.11.6",
     "ajv": "^6.12.6",
     "ajv-cli": "^3.1.0",
-    "aws-sdk": "^2.1095.0",
+    "aws-sdk": "^2.1524.0",
     "basic-ftp": "^5.0.3",
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.1.1",
     "bufferutil": "^4.0.1",
     "connect-flash": "^0.1.1",
@@ -117,14 +117,14 @@
     "dotenv": "^6.2.0",
     "ejs": "~2.5.7",
     "email-templates": "^5.1.0",
-    "express": "~4.17.1",
+    "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.0",
     "express-fileupload": "^1.3.1",
     "fast-json-patch": "^3.0.0-1",
     "fs-extra": "^8.1.0",
     "http-errors": "~1.6.2",
     "http-status-codes": "^1.4.0",
-    "i18n": "^0.8.3",
+    "i18n": "^0.15.1",
     "i18n-iso-countries": "^5.1.0",
     "inflection": "^1.12.0",
     "jquery": "^3.6.0",
@@ -132,11 +132,11 @@
     "jsonpath-plus": "^7.2.0",
     "line-by-line": "^0.1.6",
     "lodash": "^4.17.21",
-    "luxon": "^2.3.1",
+    "luxon": "^2.5.2",
     "mime-types": "^2.1.24",
     "mkdirp": "^3.0.0",
     "mocha": "^9.2.2",
-    "moment": "^2.24.0",
+    "moment": "^2.29.4",
     "morgan": "~1.9.0",
     "mv": "^2.1.1",
     "node-cache": "^5.1.2",
@@ -144,16 +144,16 @@
     "node-fetch": "^2.6.7",
     "node-stream-zip": "^1.9.1",
     "nodemon": "^2.0.15",
-    "npm": "^6.14.16",
-    "passport": "^0.4.0",
+    "npm": "^7.24.2",
+    "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.2.1",
+    "pg": "^8.11.3",
     "randomstring": "^1.2.3",
     "readline": "^1.3.0",
     "rollbar": "^2.21.1",
     "seedrandom": "^3.0.5",
-    "semver": "^7.3.8",
-    "sequelize": "^6.7.0",
+    "semver": "^7.5.4",
+    "sequelize": "^6.35.2",
     "sequelize-cli": "^6.4.1",
     "sequelize-fixtures": "^1.2.0",
     "sequelize-paginate": "^1.1.6",
@@ -176,7 +176,7 @@
     "eslint": "^7.9.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-mocha": "^8.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "foreman": "^3.0.1",
