--- a/angular/package.json
+++ b/angular/package.json
@@ -54,7 +54,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-packagr": "^14.2.2",
-    "typescript": "~4.6.4",
+    "typescript": "^5.3.3",
     "webfonts-loader": "^7.3.0",
     "webpack-bundle-tracker": "^1.3.0"
   }
