--- a/angular/package.json
+++ b/angular/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "^15.2.10",
     "@angular/platform-browser-dynamic": "^15.2.10",
     "@angular/router": "^15.2.10",
-    "@ng-bootstrap/ng-bootstrap": "^11.0.0-beta.2",
+    "@ng-bootstrap/ng-bootstrap": "^14.2.0",
     "activestorage": "^5.2.6",
     "bootstrap": "^5.2.3",
     "inflection": "^1.13.1",
@@ -54,7 +54,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-packagr": "^15.2.2",
-    "typescript": "^5.3.3",
+    "typescript": "^4.9.3",
     "webfonts-loader": "^7.3.0",
     "webpack-bundle-tracker": "^1.3.0"
   }
