--- a/angular/package.json
+++ b/angular/package.json
@@ -28,14 +28,14 @@
     "mini-css-extract-plugin": "^2.4.2",
     "ngx-dropzone": "^3.1.0",
     "ngx-sortablejs": "^11.1.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.4.0",
     "sortablejs": "^1.15.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^12.1.2",
+    "@angular-builders/custom-webpack": "^15.0.0",
     "@angular-devkit/build-angular": "^15.2.10",
     "@angular/cli": "^15.2.10",
     "@angular/compiler-cli": "^15.2.10",
