--- a/angular/package.json
+++ b/angular/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "^15.2.10",
     "@ng-bootstrap/ng-bootstrap": "^14.2.0",
     "activestorage": "^5.2.6",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "~5.2.3",
     "inflection": "^1.13.1",
     "lodash": "^4.17.21",
     "luxon": "^2.0.2",
