--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     "morgan": "~1.9.0",
     "mv": "^2.1.1",
     "node-cache": "^5.1.2",
-    "node-expat": "^2.4.0",
+    "node-expat": "astro/node-expat#2bdaae78c00419e9f119a81b2dd524aa31d70f9d",
     "node-fetch": "^2.6.7",
     "node-stream-zip": "^1.9.1",
     "nodemon": "^2.0.15",
