--- a/angular/package.json
+++ b/angular/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^15.2.10",
     "@angular/router": "^15.2.10",
     "@ng-bootstrap/ng-bootstrap": "^14.2.0",
+    "@popperjs/core": "^2.11.6",
     "activestorage": "^5.2.6",
     "bootstrap": "~5.2.3",
     "inflection": "^1.13.1",
