--- a/angular/package.json
+++ b/angular/package.json
@@ -53,6 +53,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "mini-css-extract-plugin": "2.7.2",
     "ng-packagr": "^15.2.2",
     "typescript": "^4.9.3",
     "webfonts-loader": "^7.3.0",
