--- a/angular/package.json
+++ b/angular/package.json
@@ -10,35 +10,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.10",
-    "@angular/common": "^15.2.10",
-    "@angular/compiler": "^15.2.10",
-    "@angular/core": "^15.2.10",
-    "@angular/forms": "^15.2.10",
-    "@angular/localize": "^15.2.10",
-    "@angular/platform-browser": "^15.2.10",
-    "@angular/platform-browser-dynamic": "^15.2.10",
-    "@angular/router": "^15.2.10",
+    "@angular/animations": "^16.2.12",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/localize": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
     "@ng-bootstrap/ng-bootstrap": "^14.2.0",
     "@popperjs/core": "^2.11.6",
+    "@talentia/ngx-sortablejs": "^11.1.2",
     "activestorage": "^5.2.6",
     "bootstrap": "~5.2.3",
     "inflection": "^1.13.1",
     "lodash": "^4.17.21",
     "luxon": "^2.0.2",
     "ngx-dropzone": "^3.1.0",
-    "ngx-sortablejs": "^11.1.0",
     "rxjs": "^7.4.0",
     "sortablejs": "^1.15.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^15.0.0",
-    "@angular-devkit/build-angular": "^15.2.10",
-    "@angular/cli": "^15.2.10",
-    "@angular/compiler-cli": "^15.2.10",
+    "@angular-builders/custom-webpack": "^16.0.1",
+    "@angular-devkit/build-angular": "^16.2.11",
+    "@angular/cli": "^16.2.11",
+    "@angular/compiler-cli": "^16.2.12",
     "@types/activestorage": "^5.2.4",
     "@types/inflection": "^1.13.0",
     "@types/jasmine": "~3.8.0",
@@ -53,8 +53,8 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "mini-css-extract-plugin": "2.7.2",
-    "ng-packagr": "^15.2.2",
+    "mini-css-extract-plugin": "2.7.6",
+    "ng-packagr": "^16.2.3",
     "typescript": "^4.9.3",
     "webfonts-loader": "^7.3.0",
     "webpack-bundle-tracker": "^1.3.0"
