--- a/angular/package.json
+++ b/angular/package.json
@@ -55,7 +55,7 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "mini-css-extract-plugin": "2.7.6",
     "ng-packagr": "^16.2.3",
-    "typescript": "^4.9.3",
+    "typescript": "~5.1.6",
     "webfonts-loader": "^8.0.1",
     "webpack-bundle-tracker": "^1.3.0"
   }
