--- a/angular/package.json
+++ b/angular/package.json
@@ -22,10 +22,10 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.6",
     "@talentia/ngx-sortablejs": "^11.1.2",
-    "activestorage": "^5.2.6",
+    "activestorage": "^5.2.8-1",
     "bootstrap": "~5.2.3",
     "inflection": "^3.0.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "luxon": "^2.0.2",
     "ngx-dropzone": "^3.1.0",
     "rxjs": "^7.4.0",
@@ -39,10 +39,10 @@
     "@angular-devkit/build-angular": "^16.2.11",
     "@angular/cli": "^16.2.11",
     "@angular/compiler-cli": "^16.2.12",
-    "@types/activestorage": "^5.2.4",
+    "@types/activestorage": "^5.2.7",
     "@types/inflection": "^1.13.2",
     "@types/jasmine": "~3.8.0",
-    "@types/lodash": "^4.14.175",
+    "@types/lodash-es": "^4.17.12",
     "@types/luxon": "^2.0.5",
     "@types/node": "^12.11.1",
     "@types/sortablejs": "^1.15.0",
