--- a/package.json
+++ b/package.json
@@ -103,41 +103,37 @@
     "@googlemaps/google-maps-services-js": "^3.3.42",
     "@node-oauth/oauth2-server": "^5.1.0",
     "aws-sdk": "^2.1524.0",
-    "basic-ftp": "^5.0.3",
-    "bcrypt": "^5.0.1",
+    "basic-ftp": "^5.0.4",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
-    "bufferutil": "^4.0.1",
+    "bufferutil": "^4.0.8",
     "connect-flash": "^0.1.1",
-    "cookie-session": "^1.3.3",
-    "debug": "~2.6.9",
-    "dotenv": "^6.2.0",
-    "ejs": "~2.5.7",
-    "email-templates": "^5.1.0",
+    "cookie-session": "^2.0.0",
+    "debug": "~4.3.4",
+    "dotenv": "^16.3.1",
+    "ejs": "~3.1.9",
+    "email-templates": "^11.1.1",
     "express": "^4.18.2",
-    "express-ejs-layouts": "^2.5.0",
-    "express-fileupload": "^1.3.1",
-    "fast-json-patch": "^3.0.0-1",
-    "fs-extra": "^8.1.0",
+    "express-ejs-layouts": "^2.5.1",
+    "express-fileupload": "^1.4.3",
+    "fast-json-patch": "^3.1.1",
+    "fs-extra": "^11.2.0",
     "http-errors": "~1.6.2",
-    "http-status-codes": "^1.4.0",
+    "http-status-codes": "^2.3.0",
     "i18n": "^0.15.1",
-    "i18n-iso-countries": "^5.1.0",
-    "inflection": "^1.12.0",
-    "jquery": "^3.6.0",
-    "jsondiffpatch": "^0.4.1",
+    "i18n-iso-countries": "^7.7.0",
+    "inflection": "^3.0.0",
+    "jquery": "^3.7.1",
     "jsonpath-plus": "^7.2.0",
     "line-by-line": "^0.1.6",
     "lodash": "^4.17.21",
-    "luxon": "^2.5.2",
-    "mime-types": "^2.1.24",
-    "mkdirp": "^3.0.0",
-    "mocha": "^9.2.2",
+    "luxon": "^3.4.4",
+    "mime-types": "^2.1.35",
+    "mkdirp": "^3.0.1",
     "moment": "^2.29.4",
-    "morgan": "~1.9.0",
-    "mv": "^2.1.1",
+    "morgan": "~1.10.0",
     "node-cache": "^5.1.2",
     "node-expat": "astro/node-expat#2bdaae78c00419e9f119a81b2dd524aa31d70f9d",
-    "node-fetch": "^2.6.7",
     "node-stream-zip": "^1.9.1",
     "nodemon": "^2.0.15",
     "npm": "^7.24.2",
@@ -176,6 +172,7 @@
     "eslint-plugin-mocha": "^8.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "foreman": "^3.0.1",
+    "mocha": "^10.2.0",
     "nock": "^12.0.3",
     "nodemailer-mock": "^1.5.1",
     "prettier": "^2.1.2",
