--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "prettier": "^3.1.1",
     "supertest": "^6.3.3",
     "supertest-session": "^5.0.1",
-    "superwstest": "^2.0.3"
+    "superwstest": "^2.0.3",
+    "undici": "^6.2.1"
   }
 }
