--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -31,6 +31,7 @@ services:
       - DATABASE_URL=postgres://postgres@db/app
       - AWS_MOBILEAPP_ACCESS_KEY_ID
       - AWS_MOBILEAPP_SECRET_ACCESS_KEY
+      - AWS_MOBILEAPP_REGION
       - AWS_S3_ACCESS_KEY_ID=minioadmin
       - AWS_S3_SECRET_ACCESS_KEY=minioadmin
       - AWS_S3_BUCKET=app
