--- a/example.env
+++ b/example.env
@@ -26,6 +26,7 @@ MARKETING_BLOG_FEED=
 MARKETING_EMAIL=
 MARKETING_ENABLED=false
 MODEL_EXPORT_AES_KEY=
+MODEL_REGION_AES_KEY=
 NEMSIS_VALIDATOR_USERNAME=
 NEMSIS_VALIDATOR_PASSWORD=
 NEMSIS_VALIDATOR_ORGANIZATION=
