--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,19 @@
 version: 2.1
 
 orbs:
-  docker: circleci/docker@1.4.0
+  docker: circleci/docker@2.6.0
 
 jobs:
   build-and-test:
     docker:
-      - image: cimg/base:2020.01
+      - image: cimg/base:2024.05
     steps:
       - checkout
       - setup_remote_docker:
           docker_layer_caching: true
       - run: echo "$DOCKER_PASSWORD" | docker login --username $DOCKER_LOGIN --password-stdin
-      - run: docker-compose -f docker-compose.test.yml build server
-      - run: docker-compose -f docker-compose.test.yml run server bash -l -c "bin/pg_wait && npx sequelize db:create --env=test && npx sequelize db:migrate --env=test && npm run ci"
+      - run: docker compose -f docker-compose.test.yml build server
+      - run: docker compose -f docker-compose.test.yml run server bash -l -c "bin/pg_wait && npx sequelize db:create --env=test && npx sequelize db:migrate --env=test && npm run ci"
       - run: bin/release
     resource_class: large
 
