--- a/angular/projects/shared/package.json
+++ b/angular/projects/shared/package.json
@@ -5,6 +5,7 @@
     "@angular/common": "^16.2.12",
     "@angular/core": "^16.2.12",
     "@angular/forms": "^16.2.12",
+    "@angular/localize": "^16.2.12",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "activestorage": "^5.2.8-1",
     "inflection": "^3.0.0",
